--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "symfony/expression-language": "5.1.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.1.*",
+        "symfony/http-client": "5.1.*",
         "symfony/maker-bundle": "^1.21",
         "symfony/monolog-bundle": "^3.5",
         "symfony/property-access": "5.1.*",
@@ -33,6 +34,7 @@
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.3",
         "fzaninotto/faker": "^1.9",
+        "justinrainbow/json-schema": "^5.2",
         "symfony/browser-kit": "^5.1",
         "symfony/css-selector": "^5.1",
         "symfony/debug-bundle": "^5.1",
