--- a/config/services.yaml
+++ b/config/services.yaml
@@ -48,6 +48,9 @@ services:
     App\Doctrine\UserSetRoleListener:
         tags: ['doctrine.orm.entity_listener']
 
+    App\Doctrine\AppointmentTypeSetCompanyListener:
+        tags: ['doctrine.orm.entity_listener']
+
     App\Serializer\AdminContextBuilder:
         decorates: 'api_platform.serializer.context_builder'
         arguments: ['@App\Serializer\AdminContextBuilder.inner']
